# revengineer

./: .env.example  .gitignore  README.md  deepseek_api.py  deepseek_cli.py  grab_token.py  main.py  patch_client.py  pow_solver.js  pyproject.toml  requirements.txt  stress_test.py  test_fallback.py  test_instagrapi_imports.py
cookbook/: README.md
cookbook/arsenal/: README.md  __init__.py  __main__.py  cli.py  config.py  engine.py  executor.py  lab.py  models.py  operators.py  scope.py  tools.py
cookbook/examples/: arsenal_assess.py  arsenal_attack.py  auto_like_feed.py  basic_research.py  blak_outreach.py  blak_outreach.py.bak  code_review.py  competitive_analysis.py  computer_use.py  cyber_red_team.py  full_feature_test.py  instagrapi_swarm.py  iterative_dive.py  manual_agents.py  self_build_search.py  self_build_web_search.py
cookbook/swarm/: __init__.py  __main__.py  arsenal_bridge.py  campaign_ledger.py  cli.py  config.py  engine.py  instagrapi_bridge.py  models.py  orchestrator.py  renderer.py  tool_registry.py
cookbook/tests/: test_arsenal.py  test_swarm.py
